Integration with Passport social and UI Implementation

--- a/public/styles/sass/master/_brandguide.scss
+++ b/public/styles/sass/master/_brandguide.scss
@@ -2,15 +2,15 @@
     Brand Font Style
 *********************************/
 
-$brand-font: 'Open Sans';
-$secondary-font: 'gothic';
+$brand-font: 'Raleway';
+$secondary-font: 'Montserrat';
 
 /*********************************
     Brand Color Style
 *********************************/
 
 $default-color: #ffffff;
-$brand-color: #38b665;
+$brand-color: #E74949;
 $brand-title: #4c525b;
 $brand-text: #71777f;
 $brand-background: #39b766;
@@ -28,7 +28,7 @@ $btn-font-size: 15px;
 /*********************************
     Website Width
 *********************************/
-$web-container: 1024px;
+$web-container: 1366px;
 
 /*********************************
     Custom Website Spec
