--- a/views/index.html
+++ b/views/index.html
@@ -3,31 +3,54 @@
     <head>
         <title>Roadtripo</title>
 
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
         <link rel="stylesheet" href="styles/css/master/global.css" media="screen">
 
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.2/angular.js"></script>
+        <script src="javascripts/ngAutocomplete.js"></script>
         <script src="app/app.js" type="text/javascript"></script>
         <script src="app/factory.js" type="text/javascript"></script>
         <script src="app/services.js" type="text/javascript"></script>
+        <script src="app/directives/list-cities/list-cities.js" type="text/javascript"></script>
+        <script src="app/directives/list-places/list-places.js" type="text/javascript"></script>
     </head>
-    <body >
+    <body>
         <div ng-controller="myController">
             <div class="main-container">
 
-                <section class="listCities" ng-if="listCities">
-                    <ul ng-repeat="city in cities">
-                    	<li ng-click="getPlacesofCities('', city.lat, city.lng)">Name: {{city.city}}, Lat: {{city.lat}}, Lng: {{city.lng}}</li>
-                    </ul>
+                <nav>
+                    <div class="nav-wrapper">
+                        <div class="left-nav">
+                            <img src="images/logo.png"/>
+                        </div>
+                    </div>
+                </nav>
+
+                <section class="homePage" ng-show="homePage">
+                    <div class="full-screen-section">
+                        <div class="full-screen-wrapper">
+                            <div class="container">
+                                <div class="full-screen-block">
+                                    <h1>Its time for a trip</h1>
+                                    <h4>Make a iteneray with RoadTripo and keep travelling.</h4>
+                                    <div class="form-group">
+                                        <div class="form-input">
+                                            <input type="text" ng-model="source" ng-autocomplete="autocomplete" placeholder="Start"/>
+                                            <input type="text" ng-model="destination" ng-autocomplete="autocomplete" placeholder="Destination"/>
+                                        </div>
+                                        <div class="form-button">
+                                            <button type="button" ng-click="plantrip()">Submit</button>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
 
-                <section class="listPlaces" ng-if="listPlaces">
-                    <ul ng-repeat="place in places">
-                        <li>Name: {{place.venue.name}}, Place Id: {{place.venue.name}}, Lat: {{place.geometry.location.lat}}, Lng: {{place.venue.photos.groups[0].items[0].prefix}}
-                            <img ng-src="{{place.venue.photos.groups[0].items[0].prefix}}300x300{{place.venue.photos.groups[0].items[0].suffix}}"/>
-                        </li>
-                    </ul>
-                </section>
-
+                <list-cities cities="cities" places="places"></list-cities>
             </div>
         </div>
     </body>
