--- a/public/styles/css/master/global.css
+++ b/public/styles/css/master/global.css
@@ -1981,6 +1981,10 @@ input {
   font-family: 'Montserrat';
 }
 
+.list-places-wrapper .list-places-block .individual-place-block:nth-child(4) {
+  clear: both;
+}
+
 .list-places-wrapper .list-places-block .individual-place-block .individual-place-block-wrapper {
   background-color: #ffffff;
   box-shadow: 3px 3px 3px rgba(204, 204, 204, 0.1);
@@ -1989,6 +1993,9 @@ input {
 
 .list-places-wrapper .list-places-block .individual-place-block .place-image-block {
   position: relative;
+  max-height: 205px;
+  min-height: 205px;
+  overflow: hidden;
 }
 
 .list-places-wrapper .list-places-block .individual-place-block .place-image-block span {
