Adding trip to MySql

--- a/public/styles/css/master/global.css
+++ b/public/styles/css/master/global.css
@@ -1993,8 +1993,8 @@ input {
 
 .list-places-wrapper .list-places-block .individual-place-block .place-image-block {
   position: relative;
-  max-height: 205px;
-  min-height: 205px;
+  max-height: 185px;
+  min-height: 185px;
   overflow: hidden;
 }
 
@@ -2010,6 +2010,25 @@ input {
   margin-top: 0px;
   background-color: #E74949;
   padding: 3px 8px;
+}
+
+.list-places-wrapper .list-places-block .individual-place-block .place-content-block {
+  position: relative;
+}
+
+.list-places-wrapper .list-places-block .individual-place-block .place-content-block a {
+  position: absolute;
+  font-size: 14px;
+  letter-spacing: initial;
+  font-family: 'raleway';
+  float: right;
+  display: block;
+  right: 10px;
+  bottom: 10px;
+  padding: 6px 10px;
+  border-radius: 2px;
+  background-color: #e74949;
+  color: #fff;
 }
 
 .list-places-wrapper .list-places-block .individual-place-block h4 {
