--- a/public/styles/sass/master/_brandguide.scss
+++ b/public/styles/sass/master/_brandguide.scss
@@ -2,7 +2,7 @@
     Brand Font Style
 *********************************/
 
-$brand-font: 'Raleway';
+$brand-font: 'Ubuntu';
 $secondary-font: 'Montserrat';
 
 /*********************************
@@ -12,7 +12,7 @@ $secondary-font: 'Montserrat';
 $default-color: #ffffff;
 $brand-color: #E74949;
 $brand-title: #4c525b;
-$brand-text: #71777f;
+$brand-text: #343638;
 $brand-background: #39b766;
 $brandline-color: #f4f4f4;
 
