--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Roadtripo</title>
 
-        <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
         <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" media="screen" title="no title">
         <link rel="stylesheet" href="styles/css/master/global.css" media="screen">
 
@@ -43,7 +43,93 @@
                                             <input type="text"  ng-model="destination" ng-autocomplete="destination" details="destinationDetails"  placeholder="Destination"/>
                                         </div>
                                         <div class="form-button">
-                                            <button type="button" ng-click="plantrip()">Submit</button>
+                                            <button type="button" ng-click="plantrip()">Start Trip</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="explore-places-section">
+                        <div class="explore-places-wrapper">
+                            <div class="container">
+                                <div class="explore-places-block">
+                                    <h4>Explore Places</h4>
+                                    <p>Discover on and off the road with the country's most classic drives.</p>
+
+                                    <div class="explore-left-block">
+                                        <div class="single-explore-block">
+                                            <figure>
+                        						<img src="images/explore-1.png" alt="img18">
+                        						<figcaption>
+                        							<h2>Lake Havasu</h2>
+                        							<p>From Pheonix</p>
+                        						</figcaption>
+                        					</figure>
+                                        </div>
+                                    </div>
+                                    <div class="explore-right-block">
+                                        <div class="explore-top-right-block">
+                                            <div class="single-explore-block">
+                                                <figure>
+                            						<img src="images/explore-2.png" alt="img18">
+                            						<figcaption>
+                            							<h2>Monument Valley</h2>
+                            							<p>From Los Angeles</p>
+                            						</figcaption>
+                            					</figure>
+                                            </div>
+                                            <div class="single-explore-block">
+                                                <figure>
+                            						<img src="images/explore-3.png" alt="img18">
+                            						<figcaption>
+                            							<h2>Rocky Mountain</h2>
+                            							<p>From Denver</p>
+                            						</figcaption>
+                            					</figure>
+                                            </div>
+                                        </div>
+                                        <div class="explore-bottom-right-block">
+                                            <div class="single-explore-block">
+                                                <figure>
+                            						<img src="images/explore-4.png" alt="img18">
+                            						<figcaption>
+                            							<h2>Anchorage</h2>
+                            							<p>From Seatle</p>
+                            						</figcaption>
+                            					</figure>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="explore-full-block">
+                                        <div class="single-explore-block">
+                                            <figure>
+                                                <img src="images/explore-7.png" alt="img18">
+                                                <figcaption>
+                                                    <h2>Strong <span>Apollo</span></h2>
+                                                    <p>Apollo's last game of pool was so strange.</p>
+                                                </figcaption>
+                                            </figure>
+                                        </div>
+                                        <div class="single-explore-block">
+                                            <figure>
+                                                <img src="images/explore-5.png" alt="img18">
+                                                <figcaption>
+                                                    <h2>Lake Louise</h2>
+                                                    <p>From Calgary</p>
+                                                </figcaption>
+                                            </figure>
+                                        </div>
+                                        <div class="single-explore-block">
+                                            <figure>
+                                                <img src="images/explore-6.png" alt="img18">
+                                                <figcaption>
+                                                    <h2>Lake Louise</h2>
+                                                    <p>From Calgary</p>
+                                                </figcaption>
+                                            </figure>
                                         </div>
                                     </div>
                                 </div>
